--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ set(CMAKE_BUILD_TYPE Debug)
 add_executable(1 1/1.cpp)
 add_executable(2 2/2.cpp)
 add_executable(3 3/3.cpp)
+add_executable(4 4/4.cpp)
