--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,modernize-*)
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(1 1/1.cpp)
-add_executable(2 2/2.cpp)
-add_executable(3 3/3.cpp)
-add_executable(4 4/4.cpp)
+foreach(day RANGE 1 5)
+add_executable(${day} ${day}/${day}.cpp)
+endforeach()
