eighth puzzle part 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ set(CMAKE_BUILD_TYPE Debug)
 foreach(day RANGE 1 8)
 add_executable(${day} ${day}/${day}.cpp)
 endforeach()
+add_executable(82 8/82.cpp)
