eleventh puzzle part 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ foreach(day RANGE 1 11)
 add_executable(${day} ${day}/${day}.cpp)
 endforeach()
 add_executable(82 8/82.cpp)
+add_executable(112 11/112.cpp)
