fourteenth puzzle part 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,modernize-*)
 set(CMAKE_BUILD_TYPE Debug)
+include_directories(common)
 
-foreach(day RANGE 1 13)
+foreach(day RANGE 1 14)
 add_executable(${day} ${day}/${day}.cpp)
 endforeach()
 add_executable(82 8/82.cpp)
