rewrite grid iterator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(${day} ${day}/${day}.cpp)
 endforeach()
 add_executable(82 8/82.cpp)
 add_executable(112 11/112.cpp)
+# add_executable(152 15/152.cpp)
